# polymarket-bot

./: .gitignore  AUDIT_BTC_5M_STRATEGY.md  CHANGELOG.md  PATCH_SUGGESTIONS_TOP3.md  README.md  config.example.json  monitor_config.example.json  pyproject.toml  trade.py
scripts/: dashboard_server.py  monitor_iteration.py  run_dashboard.sh  run_iteration.sh  run_live.sh  run_monitor.sh  wecom_send.py
src/polymarket_bot/: __main__.py  app.py  archive.py  config.py  execution.py  gamma.py  market_state.py  math_utils.py  models.py  replay.py  report.py  strategy.py  validate.py  ws.py
tests/: test_strategy.py  test_trade.py
